@@ -6,6 +6,8 @@ void AddSC_zone_netherstorm_groupquests();
 void AddSC_zone_shadowmoon_valley_groupquests();
 void AddSC_zone_zuldrak_groupquests();
 
+void AddSC_go_scripts_groupquests();
+
 void Addmod_groupquestsScripts()
 {
     AddSC_zone_borean_tundra_groupquests();
@@ -15,4 +17,6 @@ void Addmod_groupquestsScripts()
     AddSC_zone_netherstorm_groupquests();
     AddSC_zone_shadowmoon_valley_groupquests();
     AddSC_zone_zuldrak_groupquests();
+
+    AddSC_go_scripts_groupquests();
 }
